[project]
name = "ct_3d_reconstruction"
version = "0.1.0"
description = "A simple plugin for capturing CT image slices and 3D reconstruction"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "s1alknau", email = "akknauss@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "tifffile", "h5py", "magicgui", "qtpy", "napari", "scikit-image"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
